microservices/k8s/api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1/$3
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /api/(auth)(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: auth-service
            port:
              number: 80
      - path: /api/(order)(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: orders-service
            port:
              number: 80
      - path: /api/(cart)(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: orders-service
            port:
              number: 80
      - path: /api/(product)(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: product-service
            port:
              number: 80
      - path: /api/(tenant)(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: tenant-service
            port:
              number: 80
      - path: /api/(wishlist)(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: wishlist-service
            port:
              number: 80

      # Routing untuk Grafana
      - path: /grafana(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: grafana
            port:
              number: 3000

      # Routing untuk Prometheus
      - path: /prometheus(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: prometheus
            port:
              number: 9090
